--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <ul>
         <li><a href="kontakt.html">Log in</a></li>
         <li><a href="heroji.html">Heroji</a></li>
-        <li><a class="active" href="Pocetak.html">Pocetak</a></li>
+        <li><a class="active" href="index.html">Pocetak</a></li>
         <li><a class="active" href="Gameplay.html">Gameplay</a></li>
 
       </ul>
